chrome extension completed

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,16 +12,15 @@
         <h1>Global Entry Drops</h1>
         <span class="status_title base">Status</span>
         <div>
-          <span class="status_content">Stopped</span>
-          <span class="status_content">Running</span>
+          <span class="status_content" id="stoppedSpan">Stopped</span>
+          <span class="status_content" id="runningSpan">Running</span>
         </div>
         <div class="filedContainer">
           <div class="field">
             <label for="select" class="label base"> Location ID 🪧</label>
             <div class="select">
               <select name="" id="locationId">
-                <option value="los_angelas">Los Angelal</option>
-                <option value="seattle">Seattle</option>
+                
               </select>
             </div>
           </div>
